[package]
name = "telegram-queue-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.4"
dotenv = "0.15.0"
strum = { version = "0.21.0", features = ["derive"] }
sqlx = { version = "0.5.9", features = ["postgres", "runtime-tokio-native-tls", "migrate", "macros"]}
once_cell = "1.8.0"
warp = "0.3.0"
reqwest = "0.11.5"
serde_json = "1.0.50"
